# skill-orchestration-system

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md  architecture-review-20260624.html  pyproject.toml
.agents/skills/sos/: SKILL.md
.github/workflows/: tests.yml
references/: activation-flow.md  backup-restore.md  codex-config-safety.md  manifest-schema.md  pack-composition.md  pointer-skill-authoring.md  sync-policy.md
src/sos/: __main__.py  _archive.py  active_namespace.py  apply.py  backup_records.py  backup_restore.py  backups.py  changes.py  cli.py  codex_config.py  fingerprint.py  fs_transaction.py  host_adapter.py  host_paths.py  manifest.py  models.py  pack_inspect.py  path_safety.py  paths.py  plan_ops.py  planner.py  pointer.py  propose.py  recommendation_engine.py  recommendation_store.py  redaction.py  scanner.py  skill_fs.py  sync.py  toml_io.py  workspace_activation.py  workspace_scan.py
templates/: companion-skill.md.tmpl  nagato-skill.md.tmpl  pack.toml.tmpl  workspace-pointer-skill.md.tmpl
tests/: test_active_namespace.py  test_apply.py  test_backups.py  test_changes.py  test_claude_archive.py  test_cli.py  test_codex_config.py  test_fingerprint.py  test_host_paths.py  test_manifest.py  test_models.py  test_path_safety.py  test_planner.py  test_pointer.py  test_propose.py  test_real_data_smoke.py  test_recommendation_engine.py  test_recommendation_skills.py  test_recommendation_store.py  test_scanner.py  test_skill_fs.py  test_sos_doctor.py  test_sos_skill_package.py  test_sync.py  test_workspace_activation.py  test_workspace_scan.py
(+18 files in other folders)
