[project]
name = "skill-orchestration-system"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
sos = "sos.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sos = ["templates/*.tmpl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
